*Empty MediaWiki Message*

--- a/ტორონტოს_ტელეანძა.mw
+++ b/ტორონტოს_ტელეანძა.mw
@@ -6,9 +6,9 @@
 [[სურათი:Cntower unfinished.jpg|thumb|left|ტორონტოს ტელეანძა მშენებლობის პროცესში, 1976.]]
 პროექტზე მუშაობა დღე-ღამის განმავლობაში განუწყვეტლივ მიმდინარეობდა (შაბათ-კვირის გარდა) დაახ. 40 თვის განმავლობაში 1.537 მუშის მიერ და საბოლოოდ [[1976]] წლის [[26 ივნისი|26 ივნისს]] გაიხსნა. სტრუქტურის მოკლეტალღოვანი მიმღებები შორეული სიგნალებისთვის 338 მეტრზეა დამონტაჟებული, ხოლო ტრანსმისიის ანტენა კი ანძის თავზეა მოთავსებული. მშენებლობა დაახ. $300 მილიონი [[კანადური დოლარი]] ($260 მილიონი აშშ-ის დოლარი 2005 წლის კურსით) დაჯდა და თვითღერებულება ამოღებულ იქნა 15 წელიწადში.
 
-[[სურათი:CNTowerLookingStraightUp.JPG|thumb|left|ტორონტოს ტელეანძა მის ფერხთით.]]
 ლითონის კიბე 1.776 საფეხურით აღწევს სკაი-პოდის დონემდე (447 მ/147 სართული) და ყველაზე მაღალი ლითონის კიბეა დედამიწაზე. ეს კიბე მხოლოდ ავარიულ შემთხვევაში გამოყენების მიზნით არის დამონტაჟებული და საზოგადოებისთვის დახურულია, წელიწადში ორჯერ საქველმოქმედო მიზნებით ჩატარებული კიბეზე ასვლის ღონისძიებების გამონაკლისის გარდა. საშუალო ამსვლელი კიბის თავთან მიღწევას დაახ. 30 წუთს ანდომებს, ხოლო ყველაზე სწრაფი ამსვლელის რეკორდი დღემდე იყო 7 წუთი და 52 წამი.
 
+[[სურათი:CNTowerLookingStraightUp.JPG|thumb|ტორონტოს ტელეანძა მის ფერხთით.]]
 ტელეანძის სათაურში აკრონიმი CN პროექტის წამომწყები კანადის ნაციონალური რკინიგზის (Canadian National Railway) აღმნიშვნელია. 1995 წლის პრივატიზაციის შემდეგ ანძა კანადის მიწათა კომპანიის (Canada Lands Company) საკუთრება გახდა. თუმცა ტორონტოს მოქალაქეების სურვილით ანძას ძველი სახელი დარჩა და ამჟამად აკრონიმი CN ოფიციალურად "კანადის ეროვნულს" ნიშნავს.
 
 342 მეტრის ნიშნულზე შემინული სართული და პანორამის ღია სათვალთვალო ტერასა მდებარეობს. 346 მეტრის ნიშნულზე კი "ჰორაიზონს კაფეა" და დახურული სათვალთვალო დარბაზია. 360 მეტრის სიმაღლეზე მბრუნავი რესტორანი "360" მდებარეობს, რემელიც სრულ ბრუნს ყოველ 72 წუთში ასრულებს.
