*Empty MediaWiki Message*

--- a/ჟანა_დ’არკი.mw
+++ b/ჟანა_დ’არკი.mw
@@ -6,6 +6,7 @@
 [[კატეგორია:დაბადებული 1412 ]]
 [[კატეგორია: გარდაცვლილი 1431 ]]
 
+{{Link FA|en}}
 [[bg:Жана д'Арк]]
 [[bn:জোন অফ আর্ক]]
 [[ca:Joana d'Arc]]
