--- a/ნიკოლოზ_II_(რუსეთი).mw
+++ b/ნიკოლოზ_II_(რუსეთი).mw
@@ -21,6 +21,7 @@
 [[es:Nicolás II de Rusia]]
 [[eo:Nikolao la 2-a (Rusio)]]
 [[fr:Nicolas II de Russie]]
+[[gl:Nicolás II]]
 [[ko:러시아의 니콜라이 2세]]
 [[hr:Nikola II.]]
 [[io:Nikolai 2ma]]
