*Empty MediaWiki Message*

--- a/პეტრე_იბერი.mw
+++ b/პეტრე_იბერი.mw
@@ -12,8 +12,14 @@
 
 პეტრე იბერის თეორიული მოღვაწეობა დამაკავშირებელი ხიდია ანტიკურობისა ქრისტიანობასთან. საჭირო იყო ანტიკური ფილოსოფიის სათანადო გადამუშავება და მკაცრი რედაქტირება, რის შედეგად იგი ქრისტიანობისათვის მისაღებ ფორმას შეიძენდა და ანტიკური ფილოსოფიის უკანასკნელი წარმომადგენლის - [[პროკლე]] დიადოქოსის მიერ მიღებულ ძირითად შედეგებსაც შეინარჩუნებდა. ეს ისტორიული ამოცანა პეტრე იბერმა საკმაო წარმატებით გადაჭრა. მისი ზოგიერთი შეხედულება ეკლესიისათვის მიუღებელი აღმოჩნდა. პეტრე იბერმა ნეოპლატონური წყებათა ანუ "სირათა" შესახებ შეცვალა აუცილებლობასთან დაკავშირებული იერარქიის პრინციპით, რომლის მიხედვით, პირველი მიზეზიდან გამოიყვანებოდა პირველი შედეგი და არა არსებობის ყველა საფეხური. ასე გაგებული იერარქიის  პრინციპი ეკლესიისათვის მიუღებელი იყო. პეტრე იბერის მოძღვრება ადამიანის ღმერთამდე ამაღლებისა და ყველა საგნის ღმერთში დაბრუნების შესახებ განზე ტოვებდა ქრისტიანულ წარმოდგენებს საიქიო მიზღვის, მონანიების, ტანჯვისა და გამოსყიდვის შესახებ.
 
+პეტრე იბერის ისტორიული დამსახურებაა ნეგატიური თეოლოგიისა და დიალექტიკის თეორიის ჩამოყალიბება. მისი აზრით, შეუძლებელია ღმერთის როგორც უსასრულობის დადებითი განსაზღვრა, რადგან ღმერთი ყოველგვარ დადებით განსაზღვრებაზე მაღლა დგას. ამიტომ ჩვენ ის კი არ ვიცით, თუ რა არის ღმერთი, არამედ ის, თუ რა არ არის იგი. ღმერთის შესახებ ჩვენ ვერ ვიტყვით, რომ ის არსებობს, რადგან ღმერთი მეტია არსებობაზე. ღმერთის ბუნება მოითხოვს არყოფნას. ამის გამო, პროკლესაგან განსხვავებით იგი ღმერთის უარყოფით დახასიათებას უფრო შესაფერისად თვლიდა, ვიდრე დადებითს.
 
-{{ესკიზი}}    
+პეტრე იბერის თვალსაზრისით, ღმერთის ნეგატიური გზით შემეცნება ემყარება საზღვრების მოხსნას ქვეყანასა და ღმერთს შორის. ავეყნის საფეხურების შემეცნებით და ღმერთამდე ამაღლებით დადგინდება, თუ რა არ არის ღმერთი, ამასთან, მოიხსენება საზღვარი ღმერთსა და იმას შორის, რაც არ არის ღმერთი და ამით ღმერთამდე ამაღლებული აღმოვჩნდებით, მაგრამ ეს მაინც არ არის ღმერთის წვდომის ერთადერთი გზა. არის მეორე გზაც - ღმერთის უშუალო ჭვრეტა მისტიკური ექსტაზის გზით - როცა უსასრულოს შეცნობა სასრული ადამიანის მიერ ჩვეულებრივი გზებით მიუღწეველია. თუმცა მისტიკური ექსტაზის გზა მაინც ვერ იძლევა გარანტირებულ შედეგს, ასეთი სახის ისტიკა პეტრე იბერთან ერთგვარ საეკლესიო ოპოზიციასაც ქმნიდა.
+
+
+
+
+პეტრე იბერი ნეგატიურად წყვეტს სიკეთისა და ბოროტების მიმართებას. ბოროტება არაა სუბსტანციური, იგი უკმარობაა და არ არსებობს სიკეთისგან დამოუკიდებლად. უარყოფით თეოლოგიაში დიალექტიკის გამოყენებამ პეტრე იბერი ნებით თუ უნებლიედ ეკლესიისათვის მიუღებელი მრავალი პროგრესული იდეის აღიარებამდე მიიყვანა, რისთვისაც მას ეკლესია ხშირად ივიწყებდა. ქართულმა ეკლესიამაც პეტრე იბერს დიდხანს ზურგი შეაქცია და მხოლოდ XII-XIII საუკუნეების მიჯნაზე აღიარა და წმინდანადაც შერაცხა, მაგრამ წინასწარვე დიოფიზიტად გამოაცხადა. მანამდე ქართული წყაროები მის შესახებ დუმდა.  
 
 
 
@@ -23,5 +29,6 @@
 
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი ფილოსოფოსები]]
 [[კატეგორია:დაბადებული  411]]
 [[კატეგორია:გარდაცვლილი 491]]
