--- a/იოზეფ_გებელსი.mw
+++ b/იოზეფ_გებელსი.mw
@@ -144,6 +144,7 @@
 [[კატეგორია:გარდაცვლილი  1945]]
 
 [[ar:جوزيف غوبلز]]
+[[ast:Joseph Goebbels]]
 [[bs:Josef Gebels]]
 [[da:Joseph Goebbels]]
 [[de:Joseph Goebbels]]
