*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_რ.mw
+++ b/ცნობილი_ქართველები:_რ.mw
@@ -23,7 +23,7 @@
 * [[რამიშვილი, ტრიფონ]] - დრამატურგი
 * [[რატი I]] - პოლიტიკური მოღვაწე
 * [[რატი IV]]  - კლდეკარის ერიათავი
-* [[რატიანი პროკოფი]] - ისტორიკოსი
+* [[რატიანი, პროკოფი]] - ისტორიკოსი
 * [[რატიშვილი, გაბრიელ]] - მწერალი
 
 ==რე==
