*Empty MediaWiki Message*

--- a/Symbian_OS.mw
+++ b/Symbian_OS.mw
@@ -1,7 +1,7 @@
 საკმაო ხანია რაც მობილურ ტელეფონებში სხვა და სხვა მოწყობილობების,სისტემების,ტექნოლოგიების კონვერგენცია,გაერთიანების პროცესი მიმდინარეობს.ამ ყველაფრის მაგალითად ჩვენი დღევანდელი და მომავალი მობილური ტელეფონები გამოდგება.ფუნქციონალურობის მატებასთან ერთად ჩნდება კითხვა:თუ რამ უნდა უზრნველყოს მობილურ აპარატში არსებული ფუნქციების გამართული,მდგრადი და ერთდროული მუშაობა?არსებობს პასუხი:აღნიშნული ოპერაციული სისტემის საშუალებით ხდება.
 
 მობილური ტელეფონებისათვის არსებობს შემდეგი ოპერაციული სისტემები:
-[[Symbian OS]],[[Windows Mobile]],[[Linux OS]],[[Palm OS]],[[Juix]],(Java და Linux)[[Savaje OS]](ჯერჯერობით უცნობი ოპერაციული სისტემა რომელიც,მთლიანად Java ტექნოლოგიაზეა დამყარებული.)ჩამოთვლილთაგან უმეტესობა მობილური აპარატების მომხმარებელთათვის ზედმეტნაკლებად ნაცნობია.
+[[Symbian OS]],[[Windows Mobile]],[[Linux OS]],[[Palm OS]],[[Juix]],([[ჯავა (Java) პროგრამული ენა|ჯავა]] და [[ლინუქსი]])[[Savaje OS]](ჯერჯერობით უცნობი ოპერაციული სისტემა რომელიც,მთლიანად Java ტექნოლოგიაზეა დამყარებული.)ჩამოთვლილთაგან უმეტესობა მობილური აპარატების მომხმარებელთათვის ზედმეტნაკლებად ნაცნობია.
 
 Symbian OS არის შესანიშნავი გადაწყვეტილება მობილური ტელეფონებისათვის,რომელიც ემყარება  PDA-ს საუკეთესო ფუნქციებს და ჩატვირთვისთვის მინიმალურ დროს საჭიროებს.ასევე 
 მომხმარებლისათვისვისაც არ სჭირდება ზედმეტი მწარმოებლურობა,უნდა რომ ქონდეს ტელეფონი და ამასთანავე საკმაოდ ფუნქციონალურიც კი.
