*Empty MediaWiki Message*

--- a/Symbian_OS.mw
+++ b/Symbian_OS.mw
@@ -1,61 +1,60 @@
 [[სურათი:Symbian-forum.jpg|thumb|500px|]]
-საკმაო ხანია რაც მობილურ ტელეფონებში სხვა და სხვა მოწყობილობების,სისტემების,ტექნოლოგიების კონვერგენცია,გაერთიანების პროცესი მიმდინარეობს.ამ ყველაფრის მაგალითად ჩვენი დღევანდელი და მომავალი მობილური ტელეფონები გამოდგება.ფუნქციონალურობის მატებასთან ერთად ჩნდება კითხვა:თუ რამ უნდა უზრნველყოს მობილურ აპარატში არსებული ფუნქციების გამართული,მდგრადი და ერთდროული მუშაობა?არსებობს პასუხი:აღნიშნული ოპერაციული სისტემის საშუალებით ხდება.
+საკმაო ხანია რაც მობილურ ტელეფონებში სხვა და სხვა მოწყობილობების, სისტემების, ტექნოლოგიების კონვერგენცია, გაერთიანების პროცესი მიმდინარეობს. ამ ყველაფრის მაგალითად ჩვენი დღევანდელი და მომავალი მობილური ტელეფონები გამოდგება. ფუნქციონალურობის მატებასთან ერთად ჩნდება კითხვა:თუ რამ უნდა უზრნველყოს მობილურ აპარატში არსებული ფუნქციების გამართული, მდგრადი და ერთდროული მუშაობა? არსებობს პასუხი:აღნიშნული ოპერაციული სისტემის საშუალებით ხდება.
 
 მობილური ტელეფონებისათვის არსებობს შემდეგი ოპერაციული სისტემები:
-[[Symbian OS]],[[Windows Mobile]],[[Linux OS]],[[Palm OS]],[[Juix]],([[ჯავა (Java) პროგრამული ენა|ჯავა]] და [[ლინუქსი]])[[Savaje OS]](ჯერჯერობით უცნობი ოპერაციული სისტემა რომელიც,მთლიანად Java ტექნოლოგიაზეა დამყარებული.)ჩამოთვლილთაგან უმეტესობა მობილური აპარატების მომხმარებელთათვის ზედმეტნაკლებად ნაცნობია.
+[[Symbian OS]], [[Windows Mobile]], [[Linux OS]], [[Palm OS]], [[Juix]], ([[ჯავა (Java) პროგრამული ენა|ჯავა]] და [[ლინუქსი]])[[Savaje OS]](ჯერჯერობით უცნობი ოპერაციული სისტემა რომელიც, მთლიანად Java ტექნოლოგიაზეა დამყარებული).ჩამოთვლილთაგან უმეტესობა მობილური აპარატების მომხმარებელთათვის ზედმეტნაკლებად ნაცნობია.
 
-Symbian OS არის შესანიშნავი გადაწყვეტილება მობილური ტელეფონებისათვის,რომელიც ემყარება  PDA-ს საუკეთესო ფუნქციებს და ჩატვირთვისთვის მინიმალურ დროს საჭიროებს.ასევე 
-მომხმარებლისათვისვისაც არ სჭირდება ზედმეტი მწარმოებლურობა,უნდა რომ ქონდეს ტელეფონი და ამასთანავე საკმაოდ ფუნქციონალურიც კი.
-
+Symbian OS არის შესანიშნავი გადაწყვეტილება მობილური ტელეფონებისათვის,რომელიც ემყარება  PDA-ს საუკეთესო ფუნქციებს და ჩატვირთვისთვის მინიმალურ დროს საჭიროებს. ასევე მომხმარებლისათვისვისაც არ სჭირდება ზედმეტი მწარმოებლურობა, უნდა რომ ქონდეს ტელეფონი და ამასთანავე საკმაოდ ფუნქციონალურიც კი.
 
 
-გამომდინარე იქედან რომ,სამწუხაროდ ამ პლათფორმაზე მომუშავე ტელეფონები ნაკლებად ძლიერი(მაქსიმუმი 220 MHz, 8.1 ვერსიის შემთხვევაში) პროცესორებით არიან აღჭურვილნი,ამიტომაც მწარმოებლურობა მთლად მოწოდების სიმაღლეზე ვერ დგას.ეს ალბათ უფრო მწარმოებლების პრობლემაა,ვიდრე ოპერაციული სისტემის.ამიტომაც მომხმარებელმა ხშირად უნდა ადევნოს თვალი გაშვებულ პროგრამებს,პროცესებს რათა არ მოხდეს ოპერატიული მეხსიერების და შემდეგ ტელეფონის გადატვირთვა.
+
+გამომდინარე იქედან რომ, სამწუხაროდ ამ პლათფორმაზე მომუშავე ტელეფონები ნაკლებად ძლიერი(მაქსიმუმი 220 MHz, 8.1 ვერსიის შემთხვევაში) პროცესორებით არიან აღჭურვილნი, ამიტომაც მწარმოებლურობა მთლად მოწოდების სიმაღლეზე ვერ დგას. ეს ალბათ უფრო მწარმოებლების პრობლემაა, ვიდრე ოპერაციული სისტემის. ამიტომაც მომხმარებელმა ხშირად უნდა ადევნოს თვალი გაშვებულ პროგრამებს, პროცესებს რათა არ მოხდეს ოპერატიული მეხსიერების და შემდეგ ტელეფონის გადატვირთვა.
 
 
 ==ისტორია==
 
-თამამად შეიძლება ითქვას რომ,Symbian OS გახლავთ მემკვიდრე EPOC პლათფორმისა,რომელიც თავის მხრივ Psion-ის კლასის ციფრულ ორგანაიზერებს ეფუძნებოდა.1984 წელს მზის შუქი იხილა პირველმა ციფრულმა პერსონალურმა ორგანაიზერმა Psion Organizer.სწორედ აღნიშნულმა მოწყობილობამ გადააწყვეტინა ბრიტანელ მწარმოებელ Psion-ს შეექმნა ოპერაციული სისტემა,რაც მოგვიანებით,1991 წლს განხორციელდა და ორგანაიზერების ხაზი  Psion Series 3 გამოვიდა,რომელმაც პირველმა გამოიყენა ოპერაციული სისტემა SIBO(მეორე სახელი Symbian 16). Psion-ის დამფუძნებელმა დევიდ პოტერმა გადაწყვიტა რომ,კომპანიას მარტო გაუჭირდებოდა დასახული მიზნების განხორციელება და ამიტომაც მოკავშირეების ძებნა დაიწყო.პოტერის წინადადება ერთიანი ძალებით შეექმნათ OS-ი მობილური ტელეფონებისა და მოწყობილობებისთვის დათანხმდა Ericsson, Motorola და Nokia.ამისათვის მათ კომპანია Symbian-ი ჩამოაყალიბეს,რომელიც თავიდან Psion-ის ფილიალი იყო.შემდეგ კი,დამოუკიდებელი კონცერნი გახდა.
+თამამად შეიძლება ითქვას რომ, Symbian OS გახლავთ მემკვიდრე EPOC პლათფორმისა, რომელიც თავის მხრივ Psion-ის კლასის ციფრულ ორგანაიზერებს ეფუძნებოდა. [[1984]] წელს მზის შუქი იხილა პირველმა ციფრულმა პერსონალურმა ორგანაიზერმა Psion Organizer. სწორედ აღნიშნულმა მოწყობილობამ გადააწყვეტინა ბრიტანელ მწარმოებელ Psion-ს შეექმნა ოპერაციული სისტემა, რაც მოგვიანებით, [[1991]] წლს განხორციელდა და ორგანაიზერების ხაზი  Psion Series 3 გამოვიდა, რომელმაც პირველმა გამოიყენა ოპერაციული სისტემა SIBO(მეორე სახელი Symbian 16). Psion-ის დამფუძნებელმა დევიდ პოტერმა გადაწყვიტა რომ,კომპანიას მარტო გაუჭირდებოდა დასახული მიზნების განხორციელება და ამიტომაც მოკავშირეების ძებნა დაიწყო. პოტერის წინადადება ერთიანი ძალებით შეექმნათ OS-ი მობილური ტელეფონებისა და მოწყობილობებისთვის დათანხმდა Ericsson, Motorola და Nokia. ამისათვის მათ კომპანია Symbian-ი ჩამოაყალიბეს, რომელიც თავიდან Psion-ის ფილიალი იყო. შემდეგ კი, დამოუკიდებელი კონცერნი გახდა.
 
-1997წელს Symbian OS-ის პირველი ვერსია გამოვიდა,მაგრამ,ის ვერ უზრუნველყოფდა რეალური მუშაობის შესაძლებლობას.მხოლოდ 1999წელს გამოსულმა Symbian OS 5.0 ვერსიამ უზრუნველყო მუშაობის რეალური შედეგის მიღწევა. ინჟინრებმა ორ წელიწადში სისტემის ხუთი ვერსია დაამუშავეს,რომელზეც Psion Series 7 და Psion Revo+ კომპიუტერები მუშაობდნენ.
+[[1997]] წელს Symbian OS-ის პირველი ვერსია გამოვიდა, მაგრამ, ის ვერ უზრუნველყოფდა რეალური მუშაობის შესაძლებლობას. მხოლოდ [[1999]] წელს გამოსულმა Symbian OS 5.0 ვერსიამ უზრუნველყო მუშაობის რეალური შედეგის მიღწევა. ინჟინრებმა ორ წელიწადში სისტემის ხუთი ვერსია დაამუშავეს, რომელზეც Psion Series 7 და Psion Revo+ კომპიუტერები მუშაობდნენ.
 
-2001 წელს გამოვიდა პირველი Symbian OS-ის ქვეშ მომუშავე ტელეფონი-კომუნიკატორი Nokia 9210 ვერსიით 6.0.იგი ARM9-ს ტიპის 52 MHz-იან პროცესორზე მუშაობდა,რაც საკმაოდ კარგი მაჩვენებელი იყო იმ დროისათვის მობილურ აპარატზე.
+[[2001]] წელს გამოვიდა პირველი Symbian OS-ის ქვეშ მომუშავე ტელეფონი-კომუნიკატორი Nokia 9210 ვერსიით 6.0.იგი ARM9-ს ტიპის 52 MHz-იან პროცესორზე მუშაობდა, რაც საკმაოდ კარგი მაჩვენებელი იყო იმ დროისათვის მობილურ აპარატზე.
 
-2002წლის მეორე კვარტალში გამოდის 2001წლის ნოემბერში ანონსირებული Nokia 7650.ის Symbian OS 6.1 ქვეშ მუშაობდა და ARM9 ტიპის 104 MHz-იანი პროცესორი გააჩნდა.
+[[2002]] წლის მეორე კვარტალში გამოდის [[2001]] წლის ნოემბერში ანონსირებული Nokia 7650.ის Symbian OS 6.1 ქვეშ მუშაობდა და ARM9 ტიპის 104 MHz-იანი პროცესორი გააჩნდა.
 [[სურათი:SymbianOS licensees 470.jpg|thumb|250px|]]
-აღსანიშნავია რომ,დღემდე აღნიშნული OS-ით აღჭურვილი მობილური ტელეფონები გამოშვებული აქვს ისეთ ცნობილ კომპანიებს როგორებიც არიან:Arima,Sanyo,Sendo,Mitsubishi,BenQ,Foma,Motorola,Nokia,Panasonic,Samsung,Siemens,Fujitsu,SonyEricsson,LG, და მსოფლიოში სმარტფონების 76%. მასზე მუშაობს.უაღრესად დიდია Nokia-ს წილი ამ ოპერაციული სისტემის განვითარებასა და ფორმირებაში.ფინურ გიგანტს 2004 წლის დასაწყისში სურვილი ჰქონდა შეეძინა კონცერნ Symbian-ის საკონტროლო პაკეტი,რაც შესაძლო მონოპოლიზების გამო პარტნიორმა მწარმოებლებმა არ დაუშვეს.
+აღსანიშნავია რომ, დღემდე აღნიშნული OS-ით აღჭურვილი მობილური ტელეფონები გამოშვებული აქვს ისეთ ცნობილ კომპანიებს როგორებიც არიან:Arima, Sanyo, Sendo, Mitsubishi, BenQ, Foma, Motorola, Nokia, Panasonic, Samsung, Siemens, Fujitsu, SonyEricsson, LG, და მსოფლიოში სმარტფონების 76%. მასზე მუშაობს. უაღრესად დიდია Nokia-ს წილი ამ ოპერაციული სისტემის განვითარებასა და ფორმირებაში. ფინურ გიგანტს [[2004]] წლის დასაწყისში სურვილი ჰქონდა შეეძინა კონცერნ Symbian-ის საკონტროლო პაკეტი,რაც შესაძლო მონოპოლიზების გამო პარტნიორმა მწარმოებლებმა არ დაუშვეს.
 
 ==სერიები==
 
-Symbian OS-ის ქვეშ მომუშავე მობილური ტელეფონები იყოფა სერიებად,სამომხმარებლო ინტერფეისების მიხედვით:S60,S80,S90 და UIQ .
+Symbian OS-ის ქვეშ მომუშავე მობილური ტელეფონები იყოფა სერიებად,სამომხმარებლო ინტერფეისების მიხედვით:S60, S80, S90 და UIQ .
 აღნიშნვნის ღირსია რომ მსოფლიოში და  საქართველოშიც ყველა გავრცელებული სერია S60 გახლავთ
 
-S60-ზე მომუშავე სმარტფონები ხასიათდებიან მობილური აპარატებისათვის დამახასიათებელი ფორმ-ფაქტორებითა და ძირითად შემთხვევაში QVGA (240X320) გაფართოების ეკრანით.სწორედ ეს პლათფორმა არის ყველაზე მეტად გავრცელებული Symbian OS მოწყობილობებში.( Lenovo P930,Nokia N71,Nokia N80,Nokia E61,Nokia E70,Nokia E60,Nokia 3250,Nokia N91,Nokia N70,Nokia N90,Nokia 6682,Nokia 6681,Nokia 6680,Nokia 3230,Nokia 6670,Nokia 6630,Nokia 6260,Nokia N-Gage QD,Nokia 7610,Nokia 6620,Nokia 3660,Nokia 3620,Nokia 6600,Nokia 3600,Nokia N-Gage ,Nokia 3650,Nokia 7650,Panasonic X800,Panasonic X700,Samsung SGH-D730,Samsung SGH - D720, Samsung SGH – D710, Samsung SGH – D700 ,Siemens SX1)
+S60-ზე მომუშავე სმარტფონები ხასიათდებიან მობილური აპარატებისათვის დამახასიათებელი ფორმ-ფაქტორებითა და ძირითად შემთხვევაში QVGA (240X320) გაფართოების ეკრანით. სწორედ ეს პლათფორმა არის ყველაზე მეტად გავრცელებული Symbian OS მოწყობილობებში.( Lenovo P930, Nokia N71, Nokia N80, Nokia E61, Nokia E70, Nokia E60, Nokia 3250, Nokia N91, Nokia N70, Nokia N90, Nokia 6682, Nokia 6681, Nokia 6680, Nokia 3230, Nokia 6670, Nokia 6630, Nokia 6260, Nokia N-Gage QD, Nokia 7610, Nokia 6620, Nokia 3660, Nokia 3620, Nokia 6600, Nokia 3600, Nokia N-Gage, Nokia 3650,Nokia 7650, Panasonic X800, Panasonic X700, Samsung SGH-D730, Samsung SGH - D720, Samsung SGH – D710, Samsung SGH – D700, Siemens SX1)
 
-Series 80-ის ქვეშ მომუშავე კომუნიკატორები აღჭურვილნი არიან QWERTY კლავიატურით,ინტეგრირებული “თაგვით” ნავიგაციისთვის,2 ეკრანიანი,NoteBook-ის მსგავსი,გასახსნელი კორპუსით და დიდი მოცულობის შიდა მეხსიერებით.( Nokia 9210/9210i,Nokia 9290,Nokia 9500,Nokia 9300/9300i)
+Series 80-ის ქვეშ მომუშავე კომუნიკატორები აღჭურვილნი არიან QWERTY კლავიატურით, ინტეგრირებული “თაგვით” ნავიგაციისთვის, 2 ეკრანიანი, NoteBook-ის მსგავსი, გასახსნელი კორპუსით და დიდი მოცულობის შიდა მეხსიერებით.(Nokia 9210/9210i, Nokia 9290, Nokia 9500, Nokia 9300/9300i)
 
-Series 90 არც თუ ისე წარმატებული პლათფორმაა.მასზე მხოლოდ ორი აპარატი Nokia 7700 და Nokia 7710-ია გამოშვებული.წარუმატებლობის გამო 7700 მოხსნილია წარმოებიდან და 7710 განახლებული ვერსიით კვლავ გამოდის.ორივე მულტიმედია ტელეფონი სენსორული ეკრანითაა აღჭურვილი,გააჩნიათ ვირტუალური QWERTY კლავიატურა და დიდი შიდა მეხსირება.შესაძლებელია მწარმოებელმა აღნიშნული სერია არაპერსპექტიულობის გამო დახუროს.ყოველშემთხვევაში S90-ზე მომუშავე აპარატების გამოსვლა უახლოეს მომავალში არ არის ანონსირებული.
+Series 90 არც თუ ისე წარმატებული პლათფორმაა. მასზე მხოლოდ ორი აპარატი Nokia 7700 და Nokia 7710-ია გამოშვებული. წარუმატებლობის გამო 7700 მოხსნილია წარმოებიდან და 7710 განახლებული ვერსიით კვლავ გამოდის. ორივე მულტიმედია ტელეფონი სენსორული ეკრანითაა აღჭურვილი, გააჩნიათ ვირტუალური QWERTY კლავიატურა და დიდი შიდა მეხსირება. შესაძლებელია მწარმოებელმა აღნიშნული სერია არაპერსპექტიულობის გამო დახუროს. ყოველშემთხვევაში S90-ზე მომუშავე აპარატების გამოსვლა უახლოეს მომავალში არ არის ანონსირებული.
 
-UIQ –ს ლიდერად SonyEricsson (P800,P900,P910,P990) და Motorola(Motorola A920/A925, Motorola A1000) გვევლინება.ამ ინტერფისისთვის დამახასიათებელია სენსორული, 240X320 გაფართოების მქონე ეკრანი და ზოგ შემთხვევაში QWERTY კლავიატურა.ოპერაცილი სისტემის ამ ნაწილში აგრეთვე,საკმაოდ მყარი პოზიციები უკავია BenQ-ს P30 და P31-ით.ერთადერთი Nokia-ს UIQ აპარატი არის 6708,ჩვეულებრივი კლავიატურითა და სენსორული ეკრანით,რომელიც რეალურად Nokia-ს ბრანდით გამოშვებული BenQ-ს P30-ია.
+UIQ –ს ლიდერად SonyEricsson (P800, P900, P910, P990) და Motorola (Motorola A920/A925, Motorola A1000) გვევლინება. ამ ინტერფისისთვის დამახასიათებელია სენსორული, 240X320 გაფართოების მქონე ეკრანი და ზოგ შემთხვევაში QWERTY კლავიატურა. ოპერაცილი სისტემის ამ ნაწილში აგრეთვე, საკმაოდ მყარი პოზიციები უკავია BenQ-ს P30 და P31-ით. ერთადერთი Nokia-ს UIQ აპარატი არის 6708, ჩვეულებრივი კლავიატურითა და სენსორული ეკრანით, რომელიც რეალურად Nokia-ს ბრანდით გამოშვებული BenQ-ს P30-ია.
 
 ==ვერსიები==
-დღეისათვის არსებობს S60-ს ბოლო,მესამე რედაქცია,ვერსიით 9.1(მასზე მუშაობენ Nokia 3250, Nokia N71, Nokia N80, Nokia N91, Nokia N92, Nokia E60, Nokia E61, Nokia E70),რომელშიც ოპერაციული სისტემის დონეზე რეალიზებულია  Bluetooth 1.2 ვერსია(დამატებულია SIM Access profile,რაც საავტომობილო გარნიტურებთან ხმამაღალი კავშირის დამყარების სრულ ფუნქციონალურობას განაპირობებს),WLAN (WiFi), USB 2.0, SD_miniSD ბარათების, QWERTY კლავიატურის, WCDMA Cell Broadcast (CBS) შეტყობინებების მიღების,მხარდაჭერა.ეს არის ძირითადი,მაგრამ,არასრული ჩამონათვალი იმ ცვლილებებისა და დამატებებისა რაც მესამე რედაქციაში შევიდა. მეორე რედაქციის ანუ S60 2nd Edition, Feature Pack 3 — Symbian OS 8.1-ს ქვეშ მომუშავე აპარატები ARM9 ტიპის 220 MHz სიხშირიანი პროცესორებით არიან აღჭურვილნი.
+დღეისათვის არსებობს S60-ს ბოლო, მესამე რედაქცია, ვერსიით 9.1(მასზე მუშაობენ Nokia 3250, Nokia N71, Nokia N80, Nokia N91, Nokia N92, Nokia E60, Nokia E61, Nokia E70), რომელშიც ოპერაციული სისტემის დონეზე რეალიზებულია  Bluetooth 1.2 ვერსია(დამატებულია SIM Access profile, რაც საავტომობილო გარნიტურებთან ხმამაღალი კავშირის დამყარების სრულ ფუნქციონალურობას განაპირობებს),WLAN (WiFi), USB 2.0, SD_miniSD ბარათების, QWERTY კლავიატურის, WCDMA Cell Broadcast (CBS) შეტყობინებების მიღების, მხარდაჭერა. ეს არის ძირითადი, მაგრამ, არასრული ჩამონათვალი იმ ცვლილებებისა და დამატებებისა რაც მესამე რედაქციაში შევიდა. მეორე რედაქციის ანუ S60 2nd Edition, Feature Pack 3 — Symbian OS 8.1-ს ქვეშ მომუშავე აპარატები ARM9 ტიპის 220 MHz სიხშირიანი პროცესორებით არიან აღჭურვილნი.
 
 ==პროგრამული უზრუნველყოფა==
 
-ყოველი პლათფორმისათვის იქმნება განსხვავებული პროგრამული უზრუნველყოფა,რაც აპარატურული და პროგრამული განსხვავებებიდან გამომდინარეობს.პლათფორმათა შორის პროგრამების,თამაშების და სხვა აპლიკაციებიების თავსებადობა შეუძლებელია.Symbian OS-ისათვის განკუთვნილი პროგრამები C++ პროგრამულ ენაზე იწერება და გააჩნია sis. გაფართოება(sisx. S60 3rd Edition-ის შემთხვევაში)
-S60-ისათვის პროგრამულ უზრუნველყოფას ქმნიან კომპანიები: SymbianWare,Psiloc,WildPalm,LonelyCatGames,AgileMobile,Unteh,Opera,Access Systems,SysOpen Digia და მრავალი სხვა.
+ყოველი პლათფორმისათვის იქმნება განსხვავებული პროგრამული უზრუნველყოფა,რაც აპარატურული და პროგრამული განსხვავებებიდან გამომდინარეობს. პლათფორმათა შორის პროგრამების, თამაშების და სხვა აპლიკაციებიების თავსებადობა შეუძლებელია. Symbian OS-ისათვის განკუთვნილი პროგრამები C++ პროგრამულ ენაზე იწერება და გააჩნია sis. გაფართოება(sisx. S60 3rd Edition-ის შემთხვევაში)
+S60-ისათვის პროგრამულ უზრუნველყოფას ქმნიან კომპანიები: SymbianWare, Psiloc, WildPalm, LonelyCatGames, AgileMobile, Unteh, Opera, Access Systems, SysOpen Digia და მრავალი სხვა.
 
-თვითონ პროგრამები პირობითად, შეგვიძლია:სისტემური,მულტიმედია,ინტერნეტ,საოფისე,უსაფრთხოების და სხვა კატეგორიებად დავყოთ.ეს დაყოფა პირობითია რადგანაც ხშირად გვხვდება ისეთი ტიპის პროგრამები რომლებიც შესაძლებელია არც ერთ კატეგორიას არ მიეკუთვნებოდეს,მაგრამ,საკმაოდ საინტერესო და საჭირო ფუნქციებს შეიცავს.
+თვითონ პროგრამები პირობითად, შეგვიძლია:სისტემური, მულტიმედია, ინტერნეტ, საოფისე, უსაფრთხოების და სხვა კატეგორიებად დავყოთ. ეს დაყოფა პირობითია რადგანაც ხშირად გვხვდება ისეთი ტიპის პროგრამები რომლებიც შესაძლებელია არც ერთ კატეგორიას არ მიეკუთვნებოდეს,მაგრამ,საკმაოდ საინტერესო და საჭირო ფუნქციებს შეიცავს.
 
-სისტემურ პროგრამებში ერთიანდება ფაილ-მენეჯერები(FileMan, FExplorer, Symbian Commander),მათი მეშვეობით შესაძლებელია ტელეფონის შიდა და მეხსიერების ბარათზე არსებულ ფაილებთან მუშაობა და სხვადასხვა ოპერაციების შესრულება.ZIP,RAR არქივებთან სამუშაო პროგრამები(ZipMan,S60zip).ტელეფონში გაშვებული პროცესების,ოპერატიული მეხსიერების კონტროლისათვის განკუთვნილი პროგრამები(AppMan,Memory Monitor, DevMan)
+სისტემურ პროგრამებში ერთიანდება ფაილ-მენეჯერები(FileMan, FExplorer, Symbian Commander),მათი მეშვეობით შესაძლებელია ტელეფონის შიდა და მეხსიერების ბარათზე არსებულ ფაილებთან მუშაობა და სხვადასხვა ოპერაციების შესრულება.ZIP, RAR არქივებთან სამუშაო პროგრამები(ZipMan,S60zip). [[ტელეფონი|ტელეფონში]] გაშვებული პროცესების, ოპერატიული მეხსიერების კონტროლისათვის განკუთვნილი პროგრამები(AppMan, Memory Monitor, DevMan)
 
-მულტიმედია პროგრამების სიუხვე აშკარად შესამჩნევია S60-ების მომხმარებელთათვის და მასში იგულისხმება ფოტო-ვიდეო-აუდიო გადამღებები,ჩამწერები,რედაქტორები;აუდიო და ვიდეო დამკვრელები..ფოტო გადამღებები (Zensis PhotoRite, Photographer, CameraFX, Scalado PhotoTwister) მნიშვნელოვნად ვერ ცვლიან საბოლოო სურათის ხარისხს,თუმცა სხვა და სხვა ეფექტების,სცენების გამოყენებით ამრავალფეროვნებენ მობილური ფოტოგრაფიის პროცესს.ხშირად გვხვდება ასევე კომბინირებული გადაწყვეტილებები,რომლებიც თავის თავში აერთიანებენ როგორც ფოტო კამერას,ასევე რედაქტორსაც კი.სამწუხაროდ ურავლესობა მობილური აპარატებისა იღებს ვიდეოს 3GP. ფორმატში,მაქსიმალური გაფართოებით 176X144.შედეგად მიღებული ვიდეო რგოლი დიდი ხარისხიანობით ვერ დაიკვეხნის.სწორედ ამ ნაკლის გამოსწორებაში დაგეხმარებათ პროგრამა ETI Camcorder,რომელიც ვიდეოს avi. ფორმატში იღებს.ჯამში გამოდის საკმაოდ ნორმალური გამოსახულება.აღნიშნული პლათფორმის მომხმარებელს შეუძლია მოიძიოს უამრავი პროგრამა/დიქტოფონი რათა ხმა ულიმიტოდ იქნას ჩაწერილი,რადგანაც მწარმოებელი აუდიო ჩაწერაზე ლიმიტს 1 წუთს ადგენს.აგრეთვე არსებობს პროგრამული შესაძლებლობა უკანა ფონზე მუშაობისას შემომავალი და გამავალი ზარების,საუბრების ჩაწერის ზუსტი დროის,ნომრის და ხანგრძლივობის მითითებით.( PowerDictaphone,CallRecorder).აუდიო,მუსკალური დამკვრელები(UltraMP3, WMAplus, MP3 Go,MP3 player) უამრავია,უბრალოდ მომხმარებელმა არჩევანი ფუნქციონალურობის:ფორმატების,playlist-ების,ეკვალაიზერების,თეგების მხარდაჭერის მიხედვით უნდა გააკეთონ.რაც შეეხება ვიდეო დამკვრელებს(SmartMovie, DVDPlayer) ისინი avi. ფორმატის ვიდეო ფაილების დასაკვრელად გამოიყენებიან და აუცილებელია ტელეფონზე Xvid კოდეკის დაყენება. აგრეთვე,აღნიშვნის ღირსია GPRS რადიო(Mobiedge.Radio, Virgin Radio, VirtualRadio, Virtual.Radio),რომლის საშუალებით,GPRS-ის გამოყენებით შესაძლებელია მოუსმინოთ ათასობით,სხვა და სხვა მუსიკალური მიმდინარეობის რადიო არხებს.
+მულტიმედია პროგრამების სიუხვე აშკარად შესამჩნევია S60-ების მომხმარებელთათვის და მასში იგულისხმება ფოტო-ვიდეო-აუდიო გადამღებები, ჩამწერები, რედაქტორები; აუდიო და ვიდეო დამკვრელები. ფოტო გადამღებები (Zensis PhotoRite, Photographer, CameraFX, Scalado PhotoTwister) მნიშვნელოვნად ვერ ცვლიან საბოლოო სურათის ხარისხს, თუმცა სხვა და სხვა ეფექტების,სცენების გამოყენებით ამრავალფეროვნებენ მობილური ფოტოგრაფიის პროცესს. ხშირად გვხვდება ასევე კომბინირებული გადაწყვეტილებები,რომლებიც თავის თავში აერთიანებენ როგორც ფოტო კამერას, ასევე რედაქტორსაც კი. სამწუხაროდ ურავლესობა მობილური აპარატებისა იღებს ვიდეოს 3GP. ფორმატში, მაქსიმალური გაფართოებით 176X144. შედეგად მიღებული ვიდეო რგოლი დიდი ხარისხიანობით ვერ დაიკვეხნის. სწორედ ამ ნაკლის გამოსწორებაში დაგეხმარებათ პროგრამა ETI Camcorder, რომელიც ვიდეოს avi. ფორმატში იღებს. ჯამში გამოდის საკმაოდ ნორმალური გამოსახულება. აღნიშნული პლათფორმის მომხმარებელს შეუძლია მოიძიოს უამრავი პროგრამა/დიქტოფონი რათა ხმა ულიმიტოდ იქნას ჩაწერილი, რადგანაც მწარმოებელი აუდიო ჩაწერაზე ლიმიტს 1 წუთს ადგენს. აგრეთვე არსებობს პროგრამული შესაძლებლობა უკანა ფონზე მუშაობისას შემომავალი და გამავალი ზარების, საუბრების ჩაწერის ზუსტი დროის, ნომრის და ხანგრძლივობის მითითებით. (PowerDictaphone,CallRecorder). აუდიო, მუსკალური დამკვრელები(UltraMP3, WMAplus, MP3 Go,MP3 player) უამრავია, უბრალოდ მომხმარებელმა არჩევანი ფუნქციონალურობის:ფორმატების, playlist-ების, კვალაიზერების, თეგების მხარდაჭერის მიხედვით უნდა გააკეთონ. რაც შეეხება ვიდეო დამკვრელებს(SmartMovie, DVDPlayer) ისინი avi. ფორმატის ვიდეო ფაილების დასაკვრელად გამოიყენებიან და აუცილებელია ტელეფონზე Xvid კოდეკის დაყენება. აგრეთვე, აღნიშვნის ღირსია GPRS რადიო(Mobiedge.Radio, Virgin Radio, VirtualRadio, Virtual.Radio), რომლის საშუალებით, GPRS-ის გამოყენებით შესაძლებელია მოუსმინოთ ათასობით, სხვა და სხვა მუსიკალური მიმდინარეობის რადიო არხებს.
 
-ინტერნეტ პროგრამების კატეგორია აერთიანებს ინტერნეტ ბრაუზერებს,მესენჯერებს,IRC,მაილ კლიენტებს და ა.შ. ინტენეტ ბრაუზერებიდან აღნიშვნის ღირსია ნორვეგიული კომპანია Opera-ს ბრაუზერი ამავე სახელწოდებით,აგრეთვე Access System-ის NetFront-ი.მათი დახმარებით მობილურიდან მთელ ინტენეტში მოგზაურობაა შესაძლებელი.უამრავ სხვა ფუნქციასთან ერთად მათ გააჩნიათ პაროლების მენეჯერის და RSS-ების მხარდაჭერა.დაინტერესებულ მომხმარებელს შეუძლია უამრავი მესენჯერი მოიძიოს თავისი ტელეფონისათვის,მაგრამ იშვიათად თუ შეგხვდებათ ისეთი ზეფუნქციონალური პროგრამა,როგორიცაა AgileMessenger.იგი აერთიანებს ICQ,AOL,Google,MSN და Yahoo მესენჯერებს,ყველა საუკეთესო ფუნქციის გათვალისწინებით. IRC კლიენტებიდან აღსანიშნავია პროგრამა Wireless IRC.მესენჯერების მსგავსად მაილ კლიენტებიც(MobiMail, Profimail, PhotoMailer) საკმაოდ ბევრია.არჩევანი კვლავ მომხმარებელზეა ფუნქციონალურობისა და პროტოკოლების მხარდაჭერის გათვალისწინებით.
+ინტერნეტ პროგრამების კატეგორია აერთიანებს ინტერნეტ ბრაუზერებს, მესენჯერებს, IRC, მაილ კლიენტებს და ა.შ. ინტენეტ ბრაუზერებიდან აღნიშვნის ღირსია ნორვეგიული კომპანია Opera-ს ბრაუზერი ამავე სახელწოდებით, აგრეთვე Access System-ის NetFront-ი. მათი დახმარებით მობილურიდან მთელ ინტენეტში მოგზაურობაა შესაძლებელი.უამრავ სხვა ფუნქციასთან ერთად მათ გააჩნიათ პაროლების მენეჯერის და RSS-ების მხარდაჭერა.დაინტერესებულ მომხმარებელს შეუძლია უამრავი მესენჯერი მოიძიოს თავისი ტელეფონისათვის,მაგრამ იშვიათად თუ შეგხვდებათ ისეთი ზეფუნქციონალური პროგრამა,როგორიცაა AgileMessenger.იგი აერთიანებს ICQ,AOL,Google,MSN და Yahoo მესენჯერებს,ყველა საუკეთესო ფუნქციის გათვალისწინებით. IRC კლიენტებიდან აღსანიშნავია პროგრამა Wireless IRC.მესენჯერების მსგავსად მაილ კლიენტებიც(MobiMail, Profimail, PhotoMailer) საკმაოდ ბევრია.არჩევანი კვლავ მომხმარებელზეა ფუნქციონალურობისა და პროტოკოლების მხარდაჭერის გათვალისწინებით.
 
-საოფისე პროგრამები საშუალებას იძლევა ტელეფონში გქონდეთ მობილური ოფისი და იმუშავოთ  word,exell,powerpoint,pdf(IGO Quick Office, AdobeReader)სევე წაიკითხოთ ელექტრონული წიგნები(eBook Reader, eBible, BReader) და ისარგებლოთ ლექსიკონებით (abbyy lingvo, Advanced English Dictionary).
+საოფისე პროგრამები საშუალებას იძლევა ტელეფონში გქონდეთ მობილური ოფისი და იმუშავოთ  word, exell, powerpoint, pdf(IGO Quick Office, AdobeReader)სევე წაიკითხოთ ელექტრონული წიგნები(eBook Reader, eBible, BReader) და ისარგებლოთ ლექსიკონებით (abbyy lingvo, Advanced English Dictionary).
 
-მას შემდეგ რაც,Symbian OS-ის ქვეშ მომუშავე სმარტფონებს კომპიუტერების მსგავსად ვირუსები დაემუქრნენ,მობილური ტელეფონებისა და პროგრამული უზრუნველყოფის მწარმოებლებმა უფრო მეტად გაამახვილეს ყურადღება უსაფრთხოებასთან დაკავშირებით.მობილური ტელეფონის ვირუსებს არ შესწევთ ძლიერი დესტრუქციული ძალა,მაგრამ უდავოა რომ ისინი სახიფათონი არიან.შესაბამისად ანტივირუსები ბლომადაა: S-MOBILE VirusGuard, SimWorks Anti-Virus, symantec antivirus, F-Secure, Kaspersky antivirus.ისინი ერთი საქმის შესასრულებლად და სხვადახვა ფუნციონალური დატვირთვის არიან შექმნილნი.ფუნქციებიდან ზოგადად აღსანიშნავია:ცეცხლოვანი კედელი(FireWall),უკანა ფონზე მუშაობის შესაძლებლობა,ავტო სკანირება მითითებულ დროსა და GPRS-ით ბაზების განახლების შესაძლებლობა.ანტივირუსების გარდა,ამ კატეგორიაში პერსონალური ინფორმაციის დამცველი პროგრამებიც უნდა ვახსენოთ.თუ გსურთ დამალოთ ან პაროლის გარეშე წვდომის უფლება არ მისცეთ სხვა პირებს თქვენს სმს-ებზე,კონტაქტებზე,გალერეაზე მაშინ თქვენ დაგჭურდებათ MumSmS,SMSguard,SmartGuard,sCrypto და ა.შ.
+მას შემდეგ რაც, Symbian OS-ის ქვეშ მომუშავე სმარტფონებს კომპიუტერების მსგავსად ვირუსები დაემუქრნენ, მობილური ტელეფონებისა და პროგრამული უზრუნველყოფის მწარმოებლებმა უფრო მეტად გაამახვილეს ყურადღება უსაფრთხოებასთან დაკავშირებით. მობილური ტელეფონის ვირუსებს არ შესწევთ ძლიერი დესტრუქციული ძალა,მაგრამ უდავოა რომ ისინი სახიფათონი არიან. შესაბამისად ანტივირუსები ბლომადაა: S-MOBILE VirusGuard, SimWorks Anti-Virus, symantec antivirus, F-Secure, Kaspersky antivirus. ისინი ერთი საქმის შესასრულებლად და სხვადახვა ფუნციონალური დატვირთვის არიან შექმნილნი. ფუნქციებიდან ზოგადად აღსანიშნავია:ცეცხლოვანი კედელი(FireWall),უკანა ფონზე მუშაობის შესაძლებლობა,ა ვტო სკანირება მითითებულ დროსა და GPRS-ით ბაზების განახლების შესაძლებლობა.ანტივირუსების გარდა, ამ კატეგორიაში პერსონალური ინფორმაციის დამცველი პროგრამებიც უნდა ვახსენოთ. თუ გსურთ დამალოთ ან პაროლის გარეშე წვდომის უფლება არ მისცეთ სხვა პირებს თქვენს სმს-ებზე,კონტაქტებზე,გალერეაზე მაშინ თქვენ დაგჭურდებათ MumSmS, SMSguard, SmartGuard, sCrypto და ა.შ.
 
 ==რესურსები ინტერნეტში==
 *[http://symbian.com/ Symbian OS]
