*Empty MediaWiki Message*

--- a/Symbian_OS.mw
+++ b/Symbian_OS.mw
@@ -1,6 +1,6 @@
 [[სურათი:Symbian-forum.jpg|thumb|300px|]]
 
-'''სიმბიან ოპ''' (Symbian OS) არის [[ოპერაციული სისტემა]] სმარტფონებისათვის (მობილური ტელეფონები ჯიბის კომპიუტერის ფუნქციით). ამჟამად ყველაზე გავრცელებულია Symbian OS.
+'''სიმბიან ოპ''' (Symbian OS) არის [[ოპერაციული სისტემა]] სმარტფონებისათვის (მობილური ტელეფონები ჯიბის კომპიუტერული ფუნქციით). ამჟამად ყველაზე გავრცელებულია Symbian OS.
 
 საკმაო ხანია რაც მობილურ ტელეფონებში სხვა და სხვა მოწყობილობების, სისტემების, ტექნოლოგიების კონვერგენცია, გაერთიანების პროცესი მიმდინარეობს. ამ ყველაფრის მაგალითად ჩვენი დღევანდელი და მომავალი მობილური ტელეფონები გამოდგება. ფუნქციონალურობის მატებასთან ერთად ჩნდება კითხვა:თუ რამ უნდა უზრნველყოს მობილურ აპარატში არსებული ფუნქციების გამართული, მდგრადი და ერთდროული მუშაობა? არსებობს პასუხი:აღნიშნული ოპერაციული სისტემის საშუალებით ხდება.
 
