--- a/ფსიქოანალიზი.mw
+++ b/ფსიქოანალიზი.mw
@@ -1,3 +1,4 @@
+{{სტილი}}
 ფსიქოანალიზის ავტორია სიღრმის ფსიქოლოგიის ფუძემდებელი [[ფროიდი, ზიგმუნდ|ზიგმუნდ ფროიდი]]. ფროიდი დაიბადა პატარა ქალაქ [[ფრაიბერგი|ფრაიბერგში]], ხოლო განათლება [[ვენის უნივერსიტეტი|ვენის უნივერსიტეტში]] მიიღო. ფროიდმა [[ბროიერი, იოზეფ|იოზეფ ბროიერისგან]] შეიტყო სიტყვით მკურნალობის ფსიქიატრიული მეთოდის შესახებ, რაც ძალზე მნიშვნელოვანი გახდა ფსიქოანალიზისთვის.
 
     
