*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_რ.mw
+++ b/ცნობილი_ქართველები:_რ.mw
@@ -22,7 +22,7 @@
 * [[რამიშვილი, სიმონ]] - საბჭოთა კონტრ-ადმირალი
 * [[რამიშვილი, ტრიფონ]] - დრამატურგი
 * [[რატი I]] - პოლიტიკური მოღვაწე
-* [[რატი IV]]  - კლდეკარის ერიათავი
+* [[რატი IV]]  - კლდეკარის ერისთავი
 * [[რატიანი, პროკოფი]] - ისტორიკოსი
 * [[რატიშვილი, გაბრიელ]] - მწერალი
 
@@ -43,10 +43,10 @@
 * [[როგავა, ანთიმოზ]] - სოციალისტური შრომის გმირი
 * [[როგავა, გიორგი]] - ენათმეცნიერი, კავკასიოლოგი
 * [[როგავა, გრიგოლ]] - რევოლუციური მოძრაობის მოღვაწე საქართველოში
-* [[რიონაშვილი, ალექსანდრე]] - პირველი ქართველი ფოტოგრაფი
-* [[რიონიშვილი, გიორგი]] - გრაფიკოსი და ფერმწერი
-* [[რიონიშვილი, ვლადიმერ]] - ფიზიკოსი
-* [[რიონიშვილი, ნიკოლოზ]] - სპეციალისტი რკინიგზის ტრანსპორტის დარგში
+* [[როინაშვილი, ალექსანდრე]] - პირველი ქართველი ფოტოგრაფი
+* [[როინიშვილი, გიორგი]] - გრაფიკოსი და ფერმწერი
+* [[როინიშვილი, ვლადიმერ]] - ფიზიკოსი
+* [[როინიშვილი, ნიკოლოზ]] - სპეციალისტი რკინიგზის ტრანსპორტის დარგში
 * [[როიტბაკი, ალექსანდრე]] - ფიზიოლოგი
 * [[რონდელი, დავით]] - კინორეჟისორი
 * [[როსტიაშვილი, შოთა]] - საბჭოთა კავშირის გმირი
