*Empty MediaWiki Message*

--- a/Symbian_OS.mw
+++ b/Symbian_OS.mw
@@ -1,8 +1,8 @@
 [[სურათი:Symbian-forum.jpg|thumb|300px|]]
 
-'''სიმბიან ოს''' (Symbian OS) არის [[ოპერაციული სისტემა]] სმარტფონებისათვის (მობილური ტელეფონები ჯიბის კომპიუტერული ფუნქციით). ამჟამად ყველაზე გავრცელებულია Symbian OS.
+'''სიმბიან ოს''' (Symbian OS) არის ამჟამად ყველაზე გავრცელებული [[ოპერაციული სისტემა]] სმარტფონებისათვის (მობილური ტელეფონები ჯიბის კომპიუტერული ფუნქციით).
 
-საკმაო ხანია რაც მობილურ ტელეფონებში სხვა და სხვა მოწყობილობების, სისტემების, ტექნოლოგიების კონვერგენცია, გაერთიანების პროცესი მიმდინარეობს, რაც ოპერაციული სისტემის საშუალებით ხდება.
+მობილურ ტელეფონებში სხვა და სხვა მოწყობილობების, სისტემების, ტექნოლოგიების კონვერგენცია, გაერთიანების პროცესი საკმაო ხანია მიმდინარეობს, რაც ძირითადად ოპერაციული სისტემის საშუალებით ხდება.
 
 მობილური ტელეფონებისათვის არსებობს შემდეგი ოპერაციული სისტემები:
 [[Symbian OS]], [[Windows Mobile]], [[Linux OS]], [[Palm OS]], [[Juix]], ([[ჯავა (Java) პროგრამული ენა|ჯავა]] და [[ლინუქსი]]) [[Savaje OS]](ჯერჯერობით უცნობი ოპერაციული სისტემა რომელიც, მთლიანად Java ტექნოლოგიაზეა დამყარებული). ჩამოთვლილთაგან უმეტესობა მობილური აპარატების მომხმარებელთათვის მეტნაკლებად ნაცნობია.
