--- a/ტორონტოს_ტელეანძა.mw
+++ b/ტორონტოს_ტელეანძა.mw
@@ -22,11 +22,11 @@
 
 ==საინტერესო ფაქტები==
 *ტორონტოს ტელეანძა 20 მეტრით მაღალია მოსკოვის [[ოსტანკინოს ტელეანძა|ოსტანკინოს ტელეანძაზე]].
-*ტორონტოს ტელეანძას წელიწადში მეხი 76-ჯერ არტყამს.
-*ტორონტოს ტელეანძის ქარწინაღობა 420კმ/ს-ია.
-*მისი ლიფტები 22კმ/ს სიჩქარით მოძრაობს და 58 წამი სჭირდება ლუკაუტ სათვალთვალო პლატფორმაზე ასასვლელად.
+*ტორონტოს ტელეანძას წელიწადში მეხი 76-ჯერ ეცემა.
+*ტორონტოს ტელეანძის ქარწინაღობა 420კმ/სთ-ია.
+*მისი ლიფტები 22კმ/სთ სიჩქარით მოძრაობს და 58 წამი სჭირდება "ლუქაუტ" სათვალთვალო პლატფორმაზე ასასვლელად.
 *ტორონტოს ტელეანძა თითქმის ორჯერ მაღალია [[ეიფელის კოშკი|ეიფელის კოშკზე]].
-*120 მილი/სთ-ში ქარის პირობებში ანძა 1.07 მეტრით იხრება ანტენის ცენტრიდან, 0,46 მ-ით სკაიპოდიდან, და 22,9 სმ-ით მთავარი პოდიდან.
+*120 მილი/სთ-ში ქარის პირობებში ანძა 1.07 მეტრით იხრება ანტენის თავთან, 0,46 მ-ით სკაიპოდთან, და 22,9 სმ-ით მთავარ სათვალთვალო დეკთან.
 *ტორონტოს ტელეანძას შეუძლია გაუძლოს 8,5 მაგნიტუდის მიწისძვრას ([[რიხტერის შკალა|რიხტერის შკალით]]).
 *1979 წელს ორ მუშას როიალის კიბით ანძის ზემო პლატფორმაზე ატანაში 7,5 საათი დასჭირდა.
 
@@ -36,7 +36,6 @@
 [[კატეგორია:ტორონტო]]
 
 [[Fa:برج ملی کانادا]]
-
 [[de:CN Tower]]
 [[en:CN Tower]]
 [[es:Torre CN]]
