*Empty MediaWiki Message*

--- a/შატილი.mw
+++ b/შატილი.mw
@@ -1,8 +1,10 @@
-[[სურათი:Geo92-048-2400.jpg|200px|thumb]]
-[[სურათი:შატილი.jpg|200px|thumb]]
-''' შატილი''', ქართული სამშენებლო ხელოვნების ერთ-ერთი ბრწყინვალე, უნიკალური ძეგლია. კლდეზე შეფენილი სოფელი ერთდროულად საცხოვრებელიც იყო და ციხესიმაგრეც, იგი საუკუნეთა მანძილზე დარაჯობდა საქართველოს ჩრდილოეთ გადმოსასვლელებს (ამჟამად აღდგენილია).  სოფლის კიდეებს მიუყვება ერთმანეთთანმიჯნით ნაგები ციხე-სახლების რიგი და იქმნება ერთიანი, მიუვალი დამცველი კედელი, რომელიც საიმედოდ კეტავს სოფელს. გარე სამყაროსთან  შატილს [[არღუნის ხეობა|არღუნის ხეობაში]] გამავალი ერთადერთი ვიწრო გზა აკავშირებს.  შატილის განაშენიანება ტერასულია, შენობათა ძირითადი ტიპია ბრტყელსახურავიანი სახლი და კოშკური საცხოვრებელი. სოფელს შენობებს შორის მთელ სიმაღლეზე აუდის ვიწრო ქვის კიბე, აქა-იქ შემორჩენილია ძვლებისაგან შეკრული ფიცარნაგები - გადასასვლელები, რომელთა მეშვეობით მტრის შემოსევის შემთხვევაში შესაძლებელი იყო მთელი სოფლის შემორბენა ქუჩაში გამოუსვლელად. 
+[[სურათი:Geo92-048-2400.jpg|250px|thumb]]
+[[სურათი:შატილი.jpg|250px|thumb]]
+''' შატილი''', ქართული სამშენებლო ხელოვნების ერთ-ერთი ბრწყინვალე, უნიკალური ძეგლია. კლდეზე შეფენილი სოფელი ერთდროულად საცხოვრებელიც იყო და ციხესიმაგრეც, იგი საუკუნეთა მანძილზე დარაჯობდა საქართველოს ჩრდილოეთ გადმოსასვლელებს (ამჟამად აღდგენილია).  
 
-1970-იანი წლებში დაიწყო შატილის რესტავრაცია-ადაპტაცია (არქიტექტორები თ.აბრამიშვილი, ნ. მინდორაძე, ი. შარაშენიძე).
+სოფლის კიდეებს მიუყვება ერთმანეთთან მიჯნით ნაგები ციხე-სახლების რიგი და იქმნება ერთიანი, მიუვალი დამცველი კედელი, რომელიც საიმედოდ კეტავს სოფელს. გარე სამყაროსთან შატილს [[არღუნის ხეობა|არღუნის ხეობაში]] გამავალი ერთადერთი ვიწრო გზა აკავშირებს.  შატილის განაშენიანება ტერასულია, შენობათა ძირითადი ტიპია ბრტყელსახურავიანი სახლი და კოშკური საცხოვრებელი. სოფელს შენობებს შორის მთელ სიმაღლეზე აუდის ვიწრო ქვის კიბე, აქა-იქ შემორჩენილია ძვლებისაგან შეკრული ფიცარნაგები - გადასასვლელები, რომელთა მეშვეობით მტრის შემოსევის შემთხვევაში შესაძლებელი იყო მთელი სოფლის შემორბენა ქუჩაში გამოუსვლელად. 
+
+1970-იანი წლებში დაიწყო შატილის რესტავრაცია-ადაპტაცია (არქიტექტორები თ. აბრამიშვილი, ნ. მინდორაძე, ი. შარაშენიძე).
 
 
 ==რესურსები ინტერნეტში== 
