*Empty MediaWiki Message*

--- a/Symbian_OS.mw
+++ b/Symbian_OS.mw
@@ -23,7 +23,11 @@
 
 ==სერიები==
 
-Symbian OS-ის ქვეშ მომუშავე მობილური ტელეფონები იყოფა სერიებად, სამომხმარებლო ინტერფეისების მიხედვით:S60, S80, S90 და UIQ.
+Symbian OS-ის ქვეშ მომუშავე მობილური ტელეფონები იყოფა სერიებად, სამომხმარებლო ინტერფეისების მიხედვით:
+*S60 
+*S80 
+*S90
+*UIQ.
 აღნიშნვნის ღირსია რომ მსოფლიოში და  საქართველოშიც ყველა გავრცელებული სერია S60 გახლავთ
 
 S60-ზე მომუშავე სმარტფონები ხასიათდებიან მობილური აპარატებისათვის დამახასიათებელი ფორმ-ფაქტორებითა და ძირითად შემთხვევაში QVGA (240X320) გაფართოების ეკრანით. სწორედ ეს პლათფორმა არის ყველაზე მეტად გავრცელებული Symbian OS მოწყობილობებში.( Lenovo P930, Nokia N71, Nokia N80, Nokia E61, Nokia E70, Nokia E60, Nokia 3250, Nokia N91, Nokia N70, Nokia N90, Nokia 6682, Nokia 6681, Nokia 6680, Nokia 3230, Nokia 6670, Nokia 6630, Nokia 6260, Nokia N-Gage QD, Nokia 7610, Nokia 6620, Nokia 3660, Nokia 3620, Nokia 6600, Nokia 3600, Nokia N-Gage, Nokia 3650,Nokia 7650, Panasonic X800, Panasonic X700, Samsung SGH-D730, Samsung SGH - D720, Samsung SGH – D710, Samsung SGH – D700, Siemens SX1)
