--- a/Symbian_OS.mw
+++ b/Symbian_OS.mw
@@ -2,7 +2,7 @@
 
 '''სიმბიან ოს''' (Symbian OS) არის ამჟამად ყველაზე გავრცელებული [[ოპერაციული სისტემა]] სმარტფონებისათვის (მობილური ტელეფონები ჯიბის კომპიუტერული ფუნქციით).
 
-მობილურ ტელეფონებში სხვა და სხვა მოწყობილობების, სისტემების, ტექნოლოგიების კონვერგენცია, გაერთიანების პროცესი საკმაო ხანია მიმდინარეობს, რაც ძირითადად ოპერაციული სისტემის საშუალებით ხდება.
+მობილურ ტელეფონებში სხვა და სხვა მოწყობილობების, სისტემების, ტექნოლოგიების კონვერგენცია, გაერთიანების პროცესი საკმაო ხანია მიმდინარეობს.ფუნქციონალურად დატვირთული ტელეფონების მდგრადი მუშაობა ძირითადად ოპერაციული სისტემის საშუალებით ხდება.
 
 მობილური ტელეფონებისათვის არსებობს შემდეგი ოპერაციული სისტემები:
 [[Symbian OS]], [[Windows Mobile]], [[Linux OS]], [[Palm OS]], [[Juix]], ([[ჯავა (Java) პროგრამული ენა|ჯავა]] და [[ლინუქსი]]) [[Savaje OS]](ჯერჯერობით უცნობი ოპერაციული სისტემა რომელიც, მთლიანად Java ტექნოლოგიაზეა დამყარებული). ჩამოთვლილთაგან უმეტესობა მობილური აპარატების მომხმარებელთათვის მეტნაკლებად ნაცნობია.
@@ -27,8 +27,8 @@ Symbian OS-ის ქვეშ მომუშავე მობილური
 *S60 
 *S80 
 *S90
-*UIQ.
-აღნიშნვნის ღირსია რომ მსოფლიოში და  საქართველოშიც ყველა გავრცელებული სერია S60 გახლავთ
+*UIQ
+მნიშვნელოვანია რომ,მსოფლიოში და  საქართველოშიც ყველა გავრცელებული სერია S60 გახლავთ
 
 S60-ზე მომუშავე სმარტფონები ხასიათდებიან მობილური აპარატებისათვის დამახასიათებელი ფორმ-ფაქტორებითა და ძირითად შემთხვევაში QVGA (240X320) გაფართოების ეკრანით. სწორედ ეს პლათფორმა არის ყველაზე მეტად გავრცელებული Symbian OS მოწყობილობებში.( Lenovo P930, Nokia N71, Nokia N80, Nokia E61, Nokia E70, Nokia E60, Nokia 3250, Nokia N91, Nokia N70, Nokia N90, Nokia 6682, Nokia 6681, Nokia 6680, Nokia 3230, Nokia 6670, Nokia 6630, Nokia 6260, Nokia N-Gage QD, Nokia 7610, Nokia 6620, Nokia 3660, Nokia 3620, Nokia 6600, Nokia 3600, Nokia N-Gage, Nokia 3650,Nokia 7650, Panasonic X800, Panasonic X700, Samsung SGH-D730, Samsung SGH - D720, Samsung SGH – D710, Samsung SGH – D700, Siemens SX1)
 
@@ -46,17 +46,17 @@ UIQ –ს ლიდერად SonyEricsson (P800, P900, P910, P990) და Mo
 ყოველი პლათფორმისათვის იქმნება განსხვავებული პროგრამული უზრუნველყოფა,რაც აპარატურული და პროგრამული განსხვავებებიდან გამომდინარეობს. პლათფორმათა შორის პროგრამების, თამაშების და სხვა აპლიკაციებიების თავსებადობა შეუძლებელია. Symbian OS-ისათვის განკუთვნილი პროგრამები C++ პროგრამულ ენაზე იწერება და გააჩნია sis. გაფართოება(sisx. S60 3rd Edition-ის შემთხვევაში)
 S60-ისათვის პროგრამულ უზრუნველყოფას ქმნიან კომპანიები: SymbianWare, Psiloc, WildPalm, LonelyCatGames, AgileMobile, Unteh, Opera, Access Systems, SysOpen Digia და მრავალი სხვა.
 
-თვითონ პროგრამები პირობითად, შეგვიძლია:სისტემური, მულტიმედია, ინტერნეტ, საოფისე, უსაფრთხოების და სხვა კატეგორიებად დავყოთ. ეს დაყოფა პირობითია რადგანაც ხშირად გვხვდება ისეთი ტიპის პროგრამები რომლებიც შესაძლებელია არც ერთ კატეგორიას არ მიეკუთვნებოდეს,მაგრამ,საკმაოდ საინტერესო და საჭირო ფუნქციებს შეიცავს.
+თვითონ პროგრამები პირობითად, შესაძლებელია:სისტემური, მულტიმედია, ინტერნეტ, საოფისე, უსაფრთხოების და სხვა კატეგორიებად დაიყოს. ეს დაყოფა პირობითია რადგანაც ხშირად გვხვდება ისეთი ტიპის პროგრამები რომლებიც შესაძლებელია არც ერთ კატეგორიას არ მიეკუთვნებოდეს,მაგრამ,საკმაოდ საინტერესო და საჭირო ფუნქციებს შეიცავს.
 
 სისტემურ პროგრამებში ერთიანდება ფაილ-მენეჯერები(FileMan, FExplorer, Symbian Commander),მათი მეშვეობით შესაძლებელია ტელეფონის შიდა და მეხსიერების ბარათზე არსებულ ფაილებთან მუშაობა და სხვადასხვა ოპერაციების შესრულება.ZIP, RAR არქივებთან სამუშაო პროგრამები(ZipMan,S60zip). [[ტელეფონი|ტელეფონში]] გაშვებული პროცესების, ოპერატიული მეხსიერების კონტროლისათვის განკუთვნილი პროგრამები(AppMan, Memory Monitor, DevMan)
 
-მულტიმედია პროგრამების სიუხვე აშკარად შესამჩნევია S60-ების მომხმარებელთათვის და მასში იგულისხმება ფოტო-ვიდეო-აუდიო გადამღებები, ჩამწერები, რედაქტორები; აუდიო და ვიდეო დამკვრელები. ფოტო გადამღებები (Zensis PhotoRite, Photographer, CameraFX, Scalado PhotoTwister) მნიშვნელოვნად ვერ ცვლიან საბოლოო სურათის ხარისხს, თუმცა სხვა და სხვა ეფექტების,სცენების გამოყენებით ამრავალფეროვნებენ მობილური ფოტოგრაფიის პროცესს. ხშირად გვხვდება ასევე კომბინირებული გადაწყვეტილებები,რომლებიც თავის თავში აერთიანებენ როგორც ფოტო კამერას, ასევე რედაქტორსაც კი. სამწუხაროდ ურავლესობა მობილური აპარატებისა იღებს ვიდეოს 3GP. ფორმატში, მაქსიმალური გაფართოებით 176X144. შედეგად მიღებული ვიდეო რგოლი დიდი ხარისხიანობით ვერ დაიკვეხნის. სწორედ ამ ნაკლის გამოსწორებაში დაგეხმარებათ პროგრამა ETI Camcorder, რომელიც ვიდეოს avi. ფორმატში იღებს. ჯამში გამოდის საკმაოდ ნორმალური გამოსახულება. აღნიშნული პლათფორმის მომხმარებელს შეუძლია მოიძიოს უამრავი პროგრამა/დიქტოფონი რათა ხმა ულიმიტოდ იქნას ჩაწერილი, რადგანაც მწარმოებელი აუდიო ჩაწერაზე ლიმიტს 1 წუთს ადგენს. აგრეთვე არსებობს პროგრამული შესაძლებლობა უკანა ფონზე მუშაობისას შემომავალი და გამავალი ზარების, საუბრების ჩაწერის ზუსტი დროის, ნომრის და ხანგრძლივობის მითითებით. (PowerDictaphone,CallRecorder). აუდიო, მუსკალური დამკვრელები(UltraMP3, WMAplus, MP3 Go,MP3 player) უამრავია, უბრალოდ მომხმარებელმა არჩევანი ფუნქციონალურობის:ფორმატების, playlist-ების, კვალაიზერების, თეგების მხარდაჭერის მიხედვით უნდა გააკეთონ. რაც შეეხება ვიდეო დამკვრელებს(SmartMovie, DVDPlayer) ისინი avi. ფორმატის ვიდეო ფაილების დასაკვრელად გამოიყენებიან და აუცილებელია ტელეფონზე Xvid კოდეკის დაყენება. აგრეთვე, აღნიშვნის ღირსია GPRS რადიო(Mobiedge.Radio, Virgin Radio, VirtualRadio, Virtual.Radio), რომლის საშუალებით, GPRS-ის გამოყენებით შესაძლებელია მოუსმინოთ ათასობით, სხვა და სხვა მუსიკალური მიმდინარეობის რადიო არხებს.
+მულტიმედია პროგრამების სიუხვე აშკარად შესამჩნევია S60-ების მომხმარებელთათვის და მასში იგულისხმება ფოტო-ვიდეო-აუდიო გადამღებები, ჩამწერები, რედაქტორები; აუდიო და ვიდეო დამკვრელები. ფოტო გადამღებები (Zensis PhotoRite, Photographer, CameraFX, Scalado PhotoTwister) მნიშვნელოვნად ვერ ცვლიან საბოლოოდ სურათის ხარისხს, თუმცა სხვა და სხვა ეფექტების,სცენების გამოყენებით ამრავალფეროვნებენ მობილური ფოტოგრაფიის პროცესს. ხშირად გვხვდება  კომბინირებული გადაწყვეტილებები,რომლებიც თავის თავში აერთიანებენ როგორც ფოტო კამერას, ასევე რედაქტორსაც კი. სამწუხაროდ ურავლესობა მობილური აპარატებისა იღებს ვიდეოს 3GP. ფორმატში, მაქსიმალური გაფართოებით 176X144. შედეგად მიღებული ვიდეო რგოლი დიდი ხარისხიანობით არ გამოირჩევა. სწორედ ამ ნაკლის გამოსწორებისათვის არის შექმნილი  პროგრამა ETI Camcorder, რომელიც ვიდეოს avi. ფორმატში იღებს. ჯამში გამოდის საკმაოდ ნორმალური გამოსახულება. აღნიშნული პლათფორმის მომხმარებელს შეუძლია მოიძიოს უამრავი პროგრამა/დიქტოფონი რათა ხმა ულიმიტოდ იქნას ჩაწერილი, რადგანაც მწარმოებელი აუდიო ჩაწერაზე ლიმიტს 1 წუთს ადგენს. აგრეთვე არსებობს პროგრამული შესაძლებლობა უკანა ფონზე მუშაობისას შემომავალი და გამავალი ზარების, საუბრების ჩაწერის ზუსტი დროის, ნომრის და ხანგრძლივობის მითითებით. (PowerDictaphone,CallRecorder). აუდიო, მუსკალური დამკვრელები(UltraMP3, WMAplus, MP3 Go,MP3 player) უამრავია, უბრალოდ მომხმარებელმა არჩევანი ფუნქციონალურობის:ფორმატების, playlist-ების, ეკვალაიზერების, თეგების მხარდაჭერის მიხედვით უნდა გააკეთონ. რაც შეეხება ვიდეო დამკვრელებს(SmartMovie, DVDPlayer) ისინი avi. ფორმატის ვიდეო ფაილების დასაკვრელად გამოიყენებიან და აუცილებელია ტელეფონზე Xvid კოდეკის დაყენება. საინტერესოა GPRS რადიო(Mobiedge.Radio, Virgin Radio, VirtualRadio, Virtual.Radio), რომლის საშუალებით, GPRS-ის გამოყენებით შესაძლებელია მოუსმინოთ ათასობით, სხვა და სხვა მუსიკალური მიმდინარეობის რადიო არხებს.
 
-ინტერნეტ პროგრამების კატეგორია აერთიანებს ინტერნეტ ბრაუზერებს, მესენჯერებს, IRC, მაილ კლიენტებს და ა.შ. ინტენეტ ბრაუზერებიდან აღნიშვნის ღირსია ნორვეგიული კომპანია Opera-ს ბრაუზერი ამავე სახელწოდებით, აგრეთვე Access System-ის NetFront-ი. მათი დახმარებით მობილურიდან მთელ ინტენეტში მოგზაურობაა შესაძლებელი.უამრავ სხვა ფუნქციასთან ერთად მათ გააჩნიათ პაროლების მენეჯერის და RSS-ების მხარდაჭერა.დაინტერესებულ მომხმარებელს შეუძლია უამრავი მესენჯერი მოიძიოს თავისი ტელეფონისათვის,მაგრამ იშვიათად თუ შეგხვდებათ ისეთი ზეფუნქციონალური პროგრამა,როგორიცაა AgileMessenger.იგი აერთიანებს ICQ,AOL,Google,MSN და Yahoo მესენჯერებს,ყველა საუკეთესო ფუნქციის გათვალისწინებით. IRC კლიენტებიდან აღსანიშნავია პროგრამა Wireless IRC.მესენჯერების მსგავსად მაილ კლიენტებიც(MobiMail, Profimail, PhotoMailer) საკმაოდ ბევრია.არჩევანი კვლავ მომხმარებელზეა ფუნქციონალურობისა და პროტოკოლების მხარდაჭერის გათვალისწინებით.
+ინტერნეტ პროგრამების კატეგორია აერთიანებს ინტერნეტ ბრაუზერებს, მესენჯერებს, IRC, მაილ კლიენტებს და ა.შ. ინტენეტ ბრაუზერებიდან საინტერესოა ნორვეგიული კომპანია Opera-ს ბრაუზერი ამავე სახელწოდებით, აგრეთვე Access System-ის NetFront-ი. მათი დახმარებით მობილურიდან მთელ ინტენეტში მოგზაურობაა შესაძლებელი.უამრავ სხვა ფუნქციასთან ერთად მათ გააჩნიათ პაროლების მენეჯერის და RSS-ების მხარდაჭერა.დაინტერესებულ მომხმარებელს შეუძლია უამრავი მესენჯერი მოიძიოს თავისი ტელეფონისათვის,მაგრამ არსებობს კომბინირებული პროგრამებიცდ,როგორიცაა AgileMessenger.იგი აერთიანებს ICQ,AOL,Google,MSN და Yahoo მესენჯერებს,ყველა საუკეთესო ფუნქციის გათვალისწინებით. IRC კლიენტებიდან აღსანიშნავია პროგრამა Wireless IRC.მესენჯერების მსგავსად მაილ კლიენტებიც(MobiMail, Profimail, PhotoMailer) საკმაოდ ბევრია.არჩევანი კვლავ მომხმარებელზეა ფუნქციონალურობისა და პროტოკოლების მხარდაჭერის გათვალისწინებით.
 
-საოფისე პროგრამები საშუალებას იძლევა ტელეფონში გქონდეთ მობილური ოფისი და იმუშავოთ  word, exell, powerpoint, pdf(IGO Quick Office, AdobeReader)სევე წაიკითხოთ ელექტრონული წიგნები(eBook Reader, eBible, BReader) და ისარგებლოთ ლექსიკონებით (abbyy lingvo, Advanced English Dictionary).
+საოფისე პროგრამები საშუალებას იძლევა მომხმარებელს ტელეფონში ქონდეს მობილური ოფისი და იმუშაოს  word, exell, powerpoint, pdf ფაილებთან(IGO Quick Office, AdobeReader)ასევე წაიკითხოს ელექტრონული წიგნები(eBook Reader, eBible, BReader) და ისარგებლოს ლექსიკონებით (abbyy lingvo, Advanced English Dictionary).
 
-მას შემდეგ რაც, Symbian OS-ის ქვეშ მომუშავე სმარტფონებს კომპიუტერების მსგავსად ვირუსები დაემუქრნენ, მობილური ტელეფონებისა და პროგრამული უზრუნველყოფის მწარმოებლებმა უფრო მეტად გაამახვილეს ყურადღება უსაფრთხოებასთან დაკავშირებით. მობილური ტელეფონის ვირუსებს არ შესწევთ ძლიერი დესტრუქციული ძალა,მაგრამ უდავოა რომ ისინი სახიფათონი არიან. შესაბამისად ანტივირუსები ბლომადაა: S-MOBILE VirusGuard, SimWorks Anti-Virus, symantec antivirus, F-Secure, Kaspersky antivirus. ისინი ერთი საქმის შესასრულებლად და სხვადახვა ფუნციონალური დატვირთვის არიან შექმნილნი. ფუნქციებიდან ზოგადად აღსანიშნავია:ცეცხლოვანი კედელი(FireWall),უკანა ფონზე მუშაობის შესაძლებლობა,ა ვტო სკანირება მითითებულ დროსა და GPRS-ით ბაზების განახლების შესაძლებლობა.ანტივირუსების გარდა, ამ კატეგორიაში პერსონალური ინფორმაციის დამცველი პროგრამებიც უნდა ვახსენოთ. თუ გსურთ დამალოთ ან პაროლის გარეშე წვდომის უფლება არ მისცეთ სხვა პირებს თქვენს სმს-ებზე,კონტაქტებზე,გალერეაზე მაშინ თქვენ დაგჭურდებათ MumSmS, SMSguard, SmartGuard, sCrypto და ა.შ.
+მას შემდეგ რაც, Symbian OS-ის ქვეშ მომუშავე სმარტფონებს კომპიუტერების მსგავსად ვირუსები დაემუქრნენ, მობილური ტელეფონებისა და პროგრამული უზრუნველყოფის მწარმოებლებმა უფრო მეტად გაამახვილეს ყურადღება უსაფრთხოებასთან დაკავშირებით. მობილური ტელეფონის ვირუსებს არ შესწევთ ძლიერი დესტრუქციული ძალა,მაგრამ უდავოა რომ ისინი სახიფათონი არიან. შესაბამისად ანტივირუსები ბლომადაა: S-MOBILE VirusGuard, SimWorks Anti-Virus, symantec antivirus, F-Secure, Kaspersky antivirus. ისინი ერთი საქმის შესასრულებლად და სხვადახვა ფუნციონალური დატვირთვით არიან შექმნილნი. ფუნქციებიდან ზოგადად აღსანიშნავია:ცეცხლოვანი კედელი(FireWall),უკანა ფონზე მუშაობის შესაძლებლობა,ავტო სკანირება მითითებულ დროსა და GPRS-ით ბაზების განახლების შესაძლებლობა.ანტივირუსების გარდა, ამ კატეგორიაში პერსონალური ინფორმაციის დამცველი პროგრამებიც უნდა ვახსენოთ. თუ კი მომხმარებელს სურს დამალოს ან პაროლის გარეშე წვდომის უფლება არ მისცეს სხვა პირებს სმს-ებზე,კონტაქტებზე,გალერეაზე მაშინ საჭიროა MumSmS, SMSguard, SmartGuard, sCrypto და ა.შ.
 
 ==რესურსები ინტერნეტში==
 *[http://symbian.com/ Symbian OS]
